[#1] Replaced DatatypeCoverter with Base64